css/style.css
.btn-one{ 
    background-color :transparent;
    border : none ;
    border-radius: 5px;
    font-size : 22px;
    color : rgb(0, 0, 0);
    font-family:verdana,"century gothic";
    padding : 10px;
    margin : 0;
}
.btn-two{ 
    background-color :transparent;
    border : rgb(240, 237, 225) solid 6px;
    border-radius: 5px;
    font-size : 22px;
    color : rgb(0, 0, 0);
    font-family:verdana,"century gothic";
    padding : 10px;
    margin : 0;
}
body { 
    background-color :  rgb(241, 241, 241);
    font-family : "verdana";
}
.big { 
    font-size: 350%;
}
h1 { 
    font-family : 'Times New Roman';
}
#welcome { 
    margin-top : 30%;

}

#navbar { 
    border-bottom : 2px solid;
}

.project{ 
    background-color : rgb(247, 247, 247);
    border :rgb(236, 236, 236) solid ;
    border-radius: 15px;
    width: 350px;
    height:350px;
    margin: 15px;
    justify-content: center;
    text-align:center;
    padding:30px;
    padding-top:10px;
    position: relative;
    display:inline-block;
}
.project h1{ 
    margin-top:0px;
    font-size:1.9rem;
}
.project p {
    font-size:.9rem;
    display:inline-block;

}
.git {
    width : 60px;
    height : 40px;
    position:absolute;
    bottom:5px;
    right:145px;
}

